some or some not chnages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,7 @@
   display: none;
 }
 
-/********************** HERO SECTION COMPONENT STYLING **************************/
+/********************** NAVBAR SECTION COMPONENT STYLING **************************/
 /**********************************************************************************************************************/
 nav {
   display: flex;
@@ -24,6 +24,7 @@ nav {
   align-items: center;
   border-bottom-right-radius: 7px;
   border-bottom-left-radius: 7px;
+  
   
 }
 nav::after {
@@ -1131,3 +1132,7 @@ footer .container .banner .right {
   }
 }
 /**********************************************************************************************************************/
+
+/******************* NOT FOUND PAGE STYLING **************/
+/**********************************************************************************************************************/
+
